Desktop/heruko 2/Farzi/force-app/main/default/objects/Configuration_Heroku__c/fields/Date__c.field-meta.xml
<CustomField>
    <fullName>Date__c</fullName>
    <label>Scheduled Date</label>
    <type>Date</type>
</CustomField>