Desktop/heruko 2/Farzi/force-app/main/default/objects/Configuration_Heroku__c/fields/Field_APIs__c.field-meta.xml
<CustomField>
    <fullName>Field_APIs__c</fullName>
    <label>Field APIs</label>
    <type>TextArea</type>
</CustomField>