Desktop/heruko 2/Farzi/force-app/main/default/objects/Configuration_Heroku__c/fields/Fields_1_APIs__c.field-meta.xml
<CustomField>
    <fullName>Fields_1_APIs__c</fullName>
    <label>Fields 1 APIs</label>
    <type>TextArea</type>
</CustomField>