Desktop/heruko 2/Farzi/force-app/main/default/objects/Configuration_Heroku__c/fields/Filter_Condition_3__c.field-meta.xml
<CustomField>
    <fullName>Filter_Condition_3__c</fullName>
    <label>Filter Condition 3</label>
    <type>TextArea</type>
</CustomField>