Desktop/heruko 2/Farzi/force-app/main/default/objects/Configuration_Heroku__c/fields/Filter_Condition_4__c.field-meta.xml
<CustomField>
    <fullName>Filter_Condition_4__c</fullName>
    <label>Filter Condition 4</label>
    <type>TextArea</type>
</CustomField>