Desktop/heruko 2/Farzi/force-app/main/default/objects/Configuration_Heroku__c/fields/Object_1_Count__c.field-meta.xml
<CustomField>
    <fullName>Object_1_Count__c</fullName>
    <label>Total Records Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>