Desktop/heruko 2/Farzi/force-app/main/default/objects/Configuration_Heroku__c/fields/Object_5_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Object_5_API_Name__c</fullName>
    <label>Object 5 API Name</label>
    <type>TextArea</type>
</CustomField>