Desktop/heruko 2/Farzi/force-app/main/default/objects/Configuration_Heroku__c/fields/Starts_At__c.field-meta.xml
<CustomField>
    <fullName>Starts_At__c</fullName>
    <label>Starts At</label>
    <type>Time</type>
</CustomField>