Desktop/heruko 2/Farzi/force-app/main/default/objects/Configuration_Heroku__c/validationRules/Schedule_Date_should.validationRule-meta.xml
<ValidationRule>
    <fullName>Schedule_Date_should</fullName>
    <active>false</active>
    <description>The schedule date must be future</description>
    <errorConditionFormula>Date__c   &lt;  TODAY()</errorConditionFormula>
    <errorDisplayField>Date__c</errorDisplayField>
    <errorMessage>Date Must be Greater than Today or In future</errorMessage>
</ValidationRule>