Desktop/heruko 2/Farzi/force-app/main/default/objects/Configuration_Heroku__c/listViews/All1.listView-meta.xml
<ListView>
    <fullName>All1</fullName>
    <columns>NAME</columns>
    <columns>Filter_Condition_1__c</columns>
    <columns>Filter_Condition_2__c</columns>
    <columns>Filter_Condition_3__c</columns>
    <columns>Filter_Condition_4__c</columns>
    <columns>Filter_Condition_5__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>